--- a/.github/workflows/AzureBuildDeployContainerApp.yml
+++ b/.github/workflows/AzureBuildDeployContainerApp.yml
@@ -10,7 +10,7 @@ jobs:
       run:
         shell: bash
     steps:
-    - uses: actions/checkout@v
+    - uses: actions/checkout@v2
     - uses: azure/docker-login@v1
       with:
         login-server: testimagepaxafe.azurecr.io
